[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>", "BigBadE"]
description = "System URI API library"
license = "MIT OR BSD-3-Clause"
name = "system_uri"
readme = "README.md"
repository = "https://github.com/BigBadE/system_uri"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
windows-sys = {  version = "0.59.0", features = ["Win32_UI_Shell", "Win32"] }

[target.'cfg(target_os = "linux")'.dependencies]
xdg-basedir = "~1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "~0.2.33"